manifests/mainsail/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainsail
spec:
  selector:
    app: mainsail
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
