manifests/mainsail/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainsail-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
spec:
  rules:
    - host: mainsail.home.lex.la
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mainsail
                port:
                  number: 8888
  tls:
    - hosts:
        - mainsail.home.lex.la
      secretName: mainsail-tls
